--- a/eks-account-service.yaml
+++ b/eks-account-service.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: account-service
+  namespace: production-deployment
   labels:
     run: account-service
 spec:
@@ -27,6 +28,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: account-service
+  namespace: production-deployment
 spec:
   selector:
     run: account-service
